--- a/site/home.html
+++ b/site/home.html
@@ -8,14 +8,34 @@
 </head>
 <body>
     <header>
-        <img src="" alt="logo">
+        <div class="logo">
+            <img src="img/logo.png" alt="logo">
+        </div>
         <ul class="listaHeader">
             <li class="paginas"><a href="cadastro.html">CADASTRO</a></li>
-            <li class="paginas"><a href="login.html"></a>LOGIN</li>
-            <li class="paginas"></li>
-            <li class="paginas"></li>
+            <li class="paginas"><a href="login.html">LOGIN</a></li>
         </ul>
     </header>
+    <div class="main">
+       <section class="bemVindo">
+        <h1>Bem-Vindo à Open<span>Book</span></h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia minus voluptates voluptas? Nemo adipisci dolore voluptas a velit saepe reiciendis tenetur veniam? Et voluptas expedita ullam veniam, unde similique ut repellendus eveniet earum repudiandae minus ipsam aut deserunt aliquid odio. Laborum, numquam debitis! Recusandae nostrum rerum quae quod dolores consectetur!</p>
+       </section>
+       <section class="motivos">
+            <div class="card">
+                <h2>Clube Do Livro</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita iusto non animi libero unde veritatis ut, reprehenderit illum earum cupiditate vitae dolore voluptatem voluptatibus voluptate? Perspiciatis earum quos sed ab dolor minima, odio tempore ullam magni! Ea voluptatem voluptates molestias.</p>
+            </div>
+            <div class="card">
+                <h1>IA para recomendações</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis ut officiis corporis veniam pariatur nulla, ducimus, doloribus minus sequi, deserunt aliquam quod sit fugiat officia placeat! Reprehenderit a nostrum, repudiandae nam quasi, reiciendis repellendus error at consequuntur aperiam delectus facere.</p>
+            </div>
+            <div class="card">
+                <h1>Jogos sobre seus livros!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto doloremque accusantium id earum iure provident ipsum maiores ratione possimus aspernatur totam reiciendis exercitationem vel, eaque esse perspiciatis laboriosam repudiandae doloribus? Nam, assumenda et excepturi mollitia dolorem deleniti perferendis adipisci laboriosam?</p>
+            </div>
+       </section>
+    </div>
     <footer>
         <div class="footerDireito">
             <img src="" alt="logo">
