--- a/site/cadastro.html
+++ b/site/cadastro.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="">
+    <title>home | OpenBook</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="img/logo.png" alt="logo">
+        </div>
+        <ul class="listaHeader">
+            <li><a class="pagAtual" href="home.html">HOME</a></li>
+            <li><a href="cadastro.html">CADASTRO</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+            <li><a href="cadastro.html">CADASTRO</a></li>
+        </ul>
+    </header>
+
+    <footer>
+        <div class="footerDireito">
+            <img src="img/logo.png" alt="logo">
+            <p>Desenvolvido por Ivan Rangel</p>
+        </div>
+        <div class="footerEsquerdo">
+
+            <h3>Contato</h3>
+            <ul class="listaFooter">
+                <li><p>Endereço Haddok Lobo 595 São Paulo SP</p></li>
+                <li><p>Telefone: +55 11 98910-3456</p></li>
+                <li><p>Email: ivanEuMesmo@gmail.com</p></li>
+            </ul>
+        </div>
+        <!-- <p>Todos os direitos reservados</p> -->
+    </footer>
 </body>
 </html>
