--- a/site/home.html
+++ b/site/home.html
@@ -12,10 +12,13 @@
             <img src="img/logo.png" alt="logo">
         </div>
         <ul class="listaHeader">
-            <li class="paginas"><a href="cadastro.html">CADASTRO</a></li>
-            <li class="paginas"><a href="login.html">LOGIN</a></li>
+            <li><a class="pagAtual" href="home.html">HOME</a></li>
+            <li><a href="cadastro.html">CADASTRO</a></li>
+            <li><a href="login.html">LOGIN</a></li>
+            <li><a href="cadastro.html">CADASTRO</a></li>
         </ul>
     </header>
+    <!--
     <div class="main">
        <section class="bemVindo">
         <h1>Bem-Vindo à Open<span>Book</span></h1>
@@ -36,21 +39,22 @@
             </div>
        </section>
     </div>
+    -->
     <footer>
         <div class="footerDireito">
-            <img src="" alt="logo">
+            <img src="img/logo.png" alt="logo">
             <p>Desenvolvido por Ivan Rangel</p>
         </div>
         <div class="footerEsquerdo">
 
             <h3>Contato</h3>
-            <ul>
+            <ul class="listaFooter">
                 <li><p>Endereço Haddok Lobo 595 São Paulo SP</p></li>
                 <li><p>Telefone: +55 11 98910-3456</p></li>
                 <li><p>Email: ivanEuMesmo@gmail.com</p></li>
             </ul>
         </div>
-        <p>Todos os direitos reservados</p>
+        <!-- <p>Todos os direitos reservados</p> -->
     </footer>
 </body>
 </html>
