criando tela usuario

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -39,8 +39,8 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./cards.html">
-                    <h3>Aquários</h3>
+                <a href="./usuario.html">
+                    <h3>Usuário</h3>
                 </a>
             </div>
 
