--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="btn-nav">
-                <h3>Aquários</h3>
+                <h3>Usuário</h3>
             </div>
 
             <div class="btn-nav-white">
