--- a/public/login.html
+++ b/public/login.html
@@ -130,7 +130,7 @@
                     sessionStorage.ID_USUARIO = json.id;
 
                     setTimeout(function () {
-                        window.location = "./dashboard/cards.html";
+                        window.location = "./dashboard/usuario.html";
                     }, 1000); // apenas para exibir o loading
 
                 });
