alterando informações do banco de dados e adicionando permissao para troca de foto de usuario

--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
 </head>
 <!---->
-<body onload="validarSessao(), exibirAquarios(),  atualizacaoPeriodica()">
+<body onload="validarSessao(), atualizacaoPeriodica()">
 
     <div class="janela">
 
