--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -107,6 +107,7 @@
     var nickVar = nick_input.value;
     var emailVar = email_input.value;
     var senhaVar = senha_input.value;
+    var fotoVar = "https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg"
     var confirmacaoSenhaVar = confirmacao_senha_input.value;
     if (
       nomeVar == "" ||
@@ -137,7 +138,8 @@
         nomeServer: nomeVar,
         nickServer: nickVar,
         emailServer: emailVar,
-        senhaServer: senhaVar
+        senhaServer: senhaVar,
+        fotoServer: fotoVar
       }),
     })
       .then(function (resposta) {
