resgatando valor da foto no sessionStorage ao se logar

--- a/public/login.html
+++ b/public/login.html
@@ -128,6 +128,8 @@
                     sessionStorage.NICK_USUARIO = json.nick;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
+                    sessionStorage.FOTO_USUARIO = json.foto;
+                
 
                     setTimeout(function () {
                         window.location = "./dashboard/usuario.html";
