--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -64,6 +64,10 @@
                     <div >
                         <p>Foto de Perfil</p>
                         <img style="width: 300px;" src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg" alt="">    
+                        <div class="campo">
+                          <span>Foto de Perfil:</span>
+                          <input id="foto_input" type="text" placeholder="URL da foto" />
+                        </div>
                     </div>
                     <div style="width: 400px; margin-left: 50px; margin-top: 50px;">
                         <div class="campo">
@@ -100,8 +104,7 @@
 </body>
 
 <script>
-/*
-function cadastrar() {
+  function cadastrar() {
     aguardar();
 
     //Recupere o valor da nova input pelo nome do id
@@ -110,13 +113,15 @@ function cadastrar() {
     var nickVar = nick_input.value;
     var emailVar = email_input.value;
     var senhaVar = senha_input.value;
+    var fotoVar = foto_input.value;
     var confirmacaoSenhaVar = confirmacao_senha_input.value;
     if (
       nomeVar == "" ||
       nickVar == "" ||
       emailVar == "" ||
       senhaVar == "" ||
-      confirmacaoSenhaVar == "" 
+      confirmacaoSenhaVar == "" ||
+      fotoVar == ""
     ) {
       cardErro.style.display = "block";
       mensagem_erro.innerHTML =
@@ -140,7 +145,8 @@ function cadastrar() {
         nomeServer: nomeVar,
         nickServer: nickVar,
         emailServer: emailVar,
-        senhaServer: senhaVar
+        senhaServer: senhaVar,
+        fotoServer: fotoVar
       }),
     })
       .then(function (resposta) {
@@ -169,7 +175,9 @@ function cadastrar() {
 
     return false;
   }
-*/
+
+
+
 </script>
 
 </html>
