--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -63,7 +63,8 @@
                 <div style="color: white; right: 0; width: 600px; margin-left: 700px; display: flex;">    
                     <div >
                         <p>Foto de Perfil</p>
-                        <img style="width: 300px;" src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg" alt="">    
+                        <div id="fotoPerfil">
+                        </div>
                         <div class="campo">
                           <span>Foto de Perfil:</span>
                           <input id="foto_input" type="text" placeholder="URL da foto" />
