--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -29,6 +29,7 @@
             <h1>AquaTech</h1>
 
             <div class="hello">
+                <img style="width: 50px; height: 50px; border-radius: 100%; margin-top: 10px; margin-right: 10px;" id="imgPerfil" src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg" alt="">
                 <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
             </div>
 
@@ -97,6 +98,7 @@
 </body>
 
 <script>
+
   function alterar() {
     console.log('oi?')
     //Recupere o valor da nova input pelo nome do id
@@ -105,9 +107,7 @@
     var nomeVar = nome_input.value;
     var nickVar = nick_input.value;
     var emailVar = email_input.value;
-    alert(sessionStorage.FOTO_USUARIO)
     var fotoVar = sessionStorage.FOTO_USUARIO;
-    alert(fotoVar)
     console.log(` Declarando id: ${idVar}`)
     if (
       nomeVar == "" ||
@@ -174,6 +174,7 @@
   function alterarImagem() {
     var novaFoto = inp_novaImagem.value;
     fotoPerfil.src = `${novaFoto}`;
+    imgPerfil.src = `${novaFoto}`;    
     divAlterarImagem.innerHTML = ``
     sessionStorage.FOTO_USUARIO = novaFoto;
 
