--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -28,13 +28,15 @@
 
 <!-- <body onload=" atualizarFeed()"> -->
 
-<body>
+<body onload="validarSessao()">
 
     <div class="janela">
         <div class="header-left">
             <h1>AquaTech</h1>
 
             <div class="hello">
+                <img id="fotoPerfil" alt="" style="display: none;">
+                <img style="width: 50px; height: 50px; border-radius: 100%; margin-top: 10px; margin-right: 10px;" id="imgPerfil" src="https://static.vecteezy.com/ti/vetor-gratis/p1/9734564-default-avatar-profile-icon-of-social-media-user-vetor.jpg" alt="">
                 <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
             </div>
 
