Adicionando rotas para o forum

--- a/public/dashboard/edicao-aviso.html
+++ b/public/dashboard/edicao-aviso.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./dashboard.html">
+                <a href="./Fórum.html">
                     <h3>Gráficos</h3>
                 </a>
             </div>
