--- a/public/dashboard/mural.html
+++ b/public/dashboard/mural.html
@@ -41,8 +41,8 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./dashboard.html">
-                    <h3>Gráficos</h3>
+                <a href="./forum.html">
+                    <h3>Fórum</h3>
                 </a>
             </div>
 
