colocando botao para cadastrar forum

--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -20,7 +20,7 @@
         rel="stylesheet">
 </head>
 <!--onload="validarSessao()", exibirAquarios(),  atualizacaoPeriodica()"-->
-<body onload="validarSessao()">
+<body>
 
     <div class="janela">
 
@@ -55,8 +55,8 @@
             </div>
 
         </div>
-            <div>
-                <button>Cadastrar Forum</button>
+            <div style="position: absolute; right: 500px; margin-top: 400px; ">
+                <button style="cursor: pointer;" >Cadastrar Forum</button>
             </div>
        
 
