forum sendo armazenado no banco de dados

--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -99,6 +99,8 @@
         var fotoForum = inp_fotoForum.value;
         var admForum = sessionStorage.ID_USUARIO;
 
+        console.log(`1 console ${nomeForum} ${fotoForum} ${admForum}`)
+
         if(fotoForum == "") {
             fotoForum = "https://img.freepik.com/fotos-premium/livro-aberto-com-espaco-de-copia_23-2148898309.jpg"
         }
@@ -106,14 +108,14 @@
         if(nomeForum == ""){
             erroCadastrar.innerHTML = `O seu Fórum precisa ter um nome!`
         }else{
-            erroCadastrar.innerHTML = ""
-            setInterval(fecharCadastro, 2000);
+            erroCadastrar.innerHTML = "";
+            setTimeout(fecharCadastro, 2000);
         }
 
         
-/*
+
     // Enviando o valor da nova input
-    fetch("/usuarios/cadastrar", {
+    fetch("/forum/cadastrar", {
       method: "POST",
       headers: {
         "Content-Type": "application/json",
@@ -121,35 +123,25 @@
       body: JSON.stringify({
         // crie um atributo que recebe o valor recuperado aqui
         // Agora vá para o arquivo routes/usuario.js
-        nomeServer: nomeVar,
-        nickServer: nickVar,
-        emailServer: emailVar,
-        senhaServer: senhaVar,
-        fotoServer: fotoVar
+
+        nomeForumServer: nomeForum,
+        fotoForumServer: fotoForum,
+        admForumServer: admForum
       }),
     })
       .then(function (resposta) {
         console.log("resposta: ", resposta);
 
         if (resposta.ok) {
-          cardErro.style.display = "block";
 
-          mensagem_erro.innerHTML =
-            "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
-
-          setTimeout(() => {
-            window.location = "login.html";
-          }, "2000");
-
-          limparFormulario();
-          finalizarAguardar();
+          erroCadastrar.innerHTML =
+            "Fórum criado com sucesso!";
         } else {
-          throw "Houve um erro ao tentar realizar o cadastro!";
+          throw "Houve um erro ao tentar realizar o cadastro do Forum!";
         }
       })
       .catch(function (resposta) {
         console.log(`#ERRO: ${resposta}`);
-        finalizarAguardar();
       });
 
     return false;
@@ -173,7 +165,7 @@
                     </div>
                     `
         });
-        */
+        
     }
 
 </script>
