API GEMINI adicionada

--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -44,8 +44,8 @@
             </div>
 
             <div class="btn-nav-white">
-                <a href="./mural.html">
-                    <h3>Mural de Avisos</h3>
+                <a href="../bobia.html">
+                    <h3>bobIA</h3>
                 </a>
             </div>
 
