termindando CSS recomendAI

--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -40,7 +40,7 @@
 
             <div class="btn-nav-white">
                 <a href="usuario.html">
-                    <h3>Usuário</h3>
+                    <h3>Perfil</h3>
                 </a>
             </div>
 
@@ -50,7 +50,7 @@
 
             <div class="btn-nav-white">
                 <a href="../bobia.html">
-                    <h3>bobIA</h3>
+                    <h3>recomendAI</h3>
                 </a>
             </div>
 
