--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="btn-nav">
-                <h3>Usuário</h3>
+                <h3>Perfil</h3>
             </div>
 
             <div class="btn-nav-white">
@@ -45,7 +45,7 @@
 
             <div class="btn-nav-white">
                 <a href="../bobia.html">
-                    <h3>bobIA</h3>
+                    <h3>recomendAI</h3>
                 </a>
             </div>
 
