começando pag livros

--- a/public/bobia.html
+++ b/public/bobia.html
@@ -69,6 +69,13 @@
 
     <script>
 
+
+        /*
+        Alterar essa função para concatenar uma unica variavel texto que tenha: genero do usuario e os livros que ele já leu 
+        EXEMPLO: Me recomende um livro sabendo que eu costumo ler suspense, romance e terror com base nas proximas palavras: (input do usuario),
+        mas não me recomende livro (lista dos nomes dos livros que o usuario já leu) XXX, YYY e ZZZ pois eu já li esses livros
+        */
+
         async function gerarResposta() {
             const pergunta = document.getElementById('pergunta').value;
 
