Cadastrando livros do usuario

--- a/public/bobia.html
+++ b/public/bobia.html
@@ -44,6 +44,12 @@
                 </a>
             </div>
 
+            <div class="btn-nav-white">
+                <a href="./dashboard/livros.html">
+                    <h3>Livros</h3>
+                </a>
+            </div>
+
             <div class="btn-logout" onclick="limparSessao()">
                 <h3>Sair</h3>
             </div>
