--- a/public/dashboard/forum.html
+++ b/public/dashboard/forum.html
@@ -54,6 +54,12 @@
                 </a>
             </div>
 
+            <div class="btn-nav-white">
+                <a href="livros.html">
+                    <h3>Livros</h3>
+                </a>
+            </div>
+
             <div class="btn-logout" onclick="limparSessao()">
                 <h3>Sair</h3>
             </div>
@@ -76,7 +82,7 @@
 
             <div id="feedForum2" class="containerCard">
 
-            </div> 
+            </div>  
             
         </div>  
 
