--- a/public/dashboard/usuario.html
+++ b/public/dashboard/usuario.html
@@ -49,6 +49,12 @@
                 </a>
             </div>
 
+            <div class="btn-nav-white">
+              <a href="livros.html">
+                  <h3>Livros</h3>
+              </a>
+          </div>
+
             <div class="btn-logout" onclick="limparSessao()">
                 <h3>Sair</h3>
             </div>
